fixed overflow in personal account navigation

--- a/src/entities/user/ui/nav/nav.module.scss
+++ b/src/entities/user/ui/nav/nav.module.scss
@@ -4,10 +4,11 @@
     padding: 20px 0;
     box-sizing: border-box;
     margin: 20px 0;
-    overflow-x: auto;
-    overflow-y: hidden;
+    overflow: hidden;
     
     ul{
+        overflow-x: auto;
+        overflow-y: hidden;
         display: flex;
         gap: 30px;
         flex-wrap: nowrap;
@@ -77,6 +78,7 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            gap: 20px;
             li{
 
                 a{
